--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <title>Tailwind Starter</title>
+  <style>
+  .logo{
+    height: 30px;
+    width: 125px;
+  }
+  </style>
 </head>
 <body>
-  
+  <!-- Desktop Navigation -->
+  <!-- Mobile Navigation -->
+  <!-- Banner -->
+  <div class="bg-gray-100">
+    <header class="container mx-auto py-16 px-6">
+      <h1 class="text-4xl leading-tight pb-6">Let's build the future of the web</h1>
+      <h3 class="text-1xl font-light pb-6">Get the web's modern capabilities on your own sites and apps with useful guidance and analysis from web.dev.</h3>
+      <div class="flex flex-col md:flex-row">
+        <button class="btn-primary"> Test My Site</button>
+        <button class="btn-secondary"> Explore Topics</button>
+      </div>
+    </header>
+  </div>
+
 </body>
 </html>
